# cli_projects

./: Cargo.toml  README.md  test.sh
big_file_generator/: Cargo.toml
big_file_generator/src/: lib.rs  main.rs
calr/: Cargo.toml  mk-outs.sh
calr/src/: lib.rs
calr/tests/: cli.rs
calr/tests/expected/: 2-2020.txt
catr/: Cargo.toml  mk-file.sh
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs  mk-file.sh
command_utils/: Cargo.toml
command_utils/src/: lib.rs
commr/: Cargo.toml  mk-outs.sh
commr/src/: lib.rs
commr/tests/: cli.rs
cutr/: Cargo.toml  mk-outs.sh
cutr/src/: data_extractor.rs  lib.rs  range_parser.rs
cutr/tests/: cli.rs
echor/: Cargo.toml  mk-outs.sh
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml  cp-tests.sh  mk-outs.sh
findr/src/: lib.rs  main.rs
findr/tests/: cli.rs
fortuner/: Cargo.toml
fortuner/src/: lib.rs
fortuner/tests/: cli.rs  mk-dat.sh  mk-outs.sh
grepr/: Cargo.toml  mk-outs.sh
grepr/src/: lib.rs  main.rs
grepr/tests/: cli.rs
headr/: Cargo.toml  mk-outs.sh
headr/src/: lib.rs
headr/tests/: cli.rs
lsr/: Cargo.toml  set-test-perms.sh
lsr/src/: lib.rs
lsr/tests/: cli.rs
tailr/: Cargo.toml  mk-outs.sh
tailr/src/: lib.rs
tailr/tests/: cli.rs
uniqr/: Cargo.toml  mk-outs.sh
uniqr/src/: lib.rs
uniqr/tests/: cli.rs
utils/: Cargo.toml
utils/src/: lib.rs
wcr/: Cargo.toml  mk-outs.sh
wcr/src/: lib.rs
wcr/tests/: cli.rs
