[workspace]
resolver = "2"

members = [
    "big_file_generator",
    "calr",
    "catr",
    "command_utils",
    "commr",
    "cutr",
    "echor",
    "findr",
    "fortuner",
    "grepr",
    "headr",
    "lsr",
    "tailr",
    "uniqr",
    "utils",
    "wcr",
]

[profile.release]
debug = false
lto = true
strip = true
panic = "abort"
codegen-units=1
opt-level="s"

[profile.production]
inherits="release"
opt-level=3
incremental=false
panic="abort"
