[package]
name = "big_file_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
command_utils = { path = "../command_utils"}
clap = "4"
rand = "0.8"
thousands = "0.2"