[package]
name = "calr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
chrono = "0.4"
itertools = "0.12"
ansi_term = "0.12"
command_utils = {path="../command_utils"}


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rstest = "0.18"
utils = {path="../utils"}

