[package]
name = "cutr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
csv = "1"
regex = "1"
command_utils = {path="../command_utils"}

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
utils = {path="../utils"}
rstest = "0.18"