[package]
name = "fortuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
command_utils = {path="../command_utils"}
walkdir = "2"
regex = "1"
itertools = "0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
utils = {path="../utils"}
rstest = "0.18"

