[package]
name = "lsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "4"
tabular = "0.2.0"
users = "0.11"
command_utils = {path = "../command_utils"}

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
utils = {path = "../utils"}
rstest = "0.18"
