[package]
name = "tailr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
num = "0.4"
regex = "1"
once_cell = "1"
command_utils = {"path" = "../command_utils"}

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rstest = "0.18"
utils = { path = "../utils" }
